docs/apache-airflow-providers-tableau/2.1.2/_sources/_api/airflow/providers/tableau/operators/tableau/index.rst.txt
:mod:`airflow.providers.tableau.operators.tableau`
==================================================

.. py:module:: airflow.providers.tableau.operators.tableau


Module Contents
---------------

.. data:: RESOURCES_METHODS
   

   

.. py:class:: TableauOperator(*, resource: str, method: str, find: str, match_with: str = 'id', site_id: Optional[str] = None, blocking_refresh: bool = True, check_interval: float = 20, tableau_conn_id: str = 'tableau_default', **kwargs)

   Bases: :class:`airflow.models.BaseOperator`

   Execute a Tableau API Resource
   https://tableau.github.io/server-client-python/docs/api-ref

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:TableauOperator`

   :param resource: The name of the resource to use.
   :type resource: str
   :param method: The name of the resource's method to execute.
   :type method: str
   :param find: The reference of resource that will receive the action.
   :type find: str
   :param match_with: The resource field name to be matched with find parameter.
   :type match_with: Optional[str]
   :param site_id: The id of the site where the workbook belongs to.
   :type site_id: Optional[str]
   :param blocking_refresh: By default will be blocking means it will wait until it has finished.
   :type blocking_refresh: bool
   :param check_interval: time in seconds that the job should wait in
       between each instance state checks until operation is completed
   :type check_interval: float
   :param tableau_conn_id: The :ref:`Tableau Connection id <howto/connection:tableau>`
       containing the credentials to authenticate to the Tableau Server.
   :type tableau_conn_id: str

   
   .. method:: execute(self, context: dict)

      Executes the Tableau API resource and pushes the job id or downloaded file URI to xcom.
      :param context: The task context during execution.
      :type context: dict
      :return: the id of the job that executes the extract refresh or downloaded file URI.
      :rtype: str




